--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
     font-size: 1rem;
 }
 
+body {
+    padding-top: 50px;
+}
+
+body,
+html,
+#root {
+    height: 100%;
+}
+
 .App {
     text-align: center;
 }
